--- a/data/blog/projects/resource-booking-app.mdx
+++ b/data/blog/projects/resource-booking-app.mdx
@@ -27,7 +27,7 @@ summary: 'Resource Booking Made Easy!'
 
 ## Introduction <a id="Introduction"></a>
 
-Have you ever found yourself in a big apartment complex with tons of amenities like gyms, pools, and shared spaces? It sounds awesome, but there's a catch – it's often a hassle to actually use these resources because everyone's vying for them. Trying to book a spot or equipment can turn into a real headache when everyone's competing for the same things. It hit me one day – there's got to be a simpler way to sort this out. That's when I got the idea for something I believe could change the game: a Resource Booking App.
+Have you ever found yourself in a big apartment complex with tons of amenities like gyms, pools, and shared spaces? It sounds awesome, but there's a catch – it's often a hassle to actually use these resources because everyone's competing for them simultaneously. It hit me one day – there's got to be a simpler way to sort this out. That's when I got the idea for something I believe could change the game: a Resource Booking App.
 
 ---
 
