--- a/data/blog/projects/resource-booking-app.mdx
+++ b/data/blog/projects/resource-booking-app.mdx
@@ -416,7 +416,7 @@ if (role === 'client') {
 }
 ```
 
-- If an unauthenticated user tries to access the client/admin page then the user is informed that they don't have access to that page as seen in the above code snippet.
+- If an unauthenticated or unauthorized user tries to access the client/admin page then the user is informed that they don't have access to that page as seen in the above code snippet.
 
 - Similarly, the admin page's security is upheld by checking whether the user's role corresponds to that of an admin and subsequently executing conditional content rendering.
 
