fix: spelling, heading

--- a/data/blog/projects/react-hooks-series.mdx
+++ b/data/blog/projects/react-hooks-series.mdx
@@ -1,16 +1,14 @@
 ---
 title: React Hooks Series
 date: '2024-01-30'
-tags: ['React Hooks Series', 'Web App', 'Mini-Project']
+tags: ['React Hooks Series', 'Web-App', 'Mini-Project']
 draft: false
 summary: 'Exploring React Hooks through Mini-Projects.'
 ---
 
-### React Hooks Series
-
 I've been on this journey as a full stack developer, working on various web applications like Booking Systems, E-commerce Apps, Data Filtering and Visualization Dashboards, Geographic Information System Applications, etc. Every project sent me back to the React documentation, learning new concepts each time.
 
-In my pursuit of mastering the technologies I use, I wondered whether only developing extensive projects is the most efficient approach. Though implementing large projects undeniably provides invaluable experience and pushes boundaries, an intermediate step tha could help is a focused study of technical concepts before diving into massive projects. This method involves implementing concepts in smaller-scale mini-projects, similar to the structure of high-quality online courses.
+In my pursuit of mastering the technologies I use, I wondered whether only developing extensive projects is the most efficient approach. Though implementing large projects undeniably provides invaluable experience and pushes boundaries, an intermediate step that could help is a focused study of technical concepts before diving into massive projects. This method involves implementing concepts in smaller-scale mini-projects, similar to the structure of high-quality online courses.
 
 The "React Hooks Series" is a bunch of upcoming blog posts, each highlighting a specific React hook. Each post will showcase the various use cases for the featured hook and demonstrate these applications through a mini-project.
 
